[project]
name = "coral"
version = "0.1.0"
description = "Coral code generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "pytest>=8.3.2",
    "ruff>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
